# discord-dashboard

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
src/backend/: __init__.py  app.py  client.py  config.py  main.py
src/backend/utils/: __init__.py  logger.py
src/frontend/static/: styles.css
src/frontend/static/scripts/: update-data.js
src/frontend/templates/: dashboard.html
